--- a/www/css/index.css
+++ b/www/css/index.css
@@ -153,9 +153,7 @@ body {
 }
 
 #mapDiv{ 
-  width:100%;
-  height:480px;
-  margin:10px 0px;
+  height:500px;
   position:relative;
 }
 
@@ -167,5 +165,44 @@ body {
   z-index:10002;
 }
 
+#form{
+  position:absolute;
+  left:30%;
+  padding-top: 25px;
+}
 
+#backBtn{
+  float: left;
+  position: absolute;
+  top: 50%;
+}
+
+.title{
+  text-align: center;
+}
+
+#refreshBtn{
+  padding-left:9px;
+  position: absolute;
+  top: 50%;
+}
+
+.round-button {
+    display:block;
+    width:50px;
+    height:50px;
+    line-height:50px;
+    border: 2px solid #f5f5f5;
+    border-radius: 50%;
+    color:#f5f5f5;
+    text-align:center;
+    text-decoration:none;
+    background: ##808080;
+    box-shadow: 0 0 3px gray;
+    font-size:20px;
+    font-weight:bold;
+}
+.round-button:hover {
+    background: lightgrey;
+}
 
